<resources>
    <string name="app_name" translatable="false">On Food</string>
    <string name="my_string">Hello, world!</string>
    <string name="back_button">Back</string>
    <string name="cart_button">Cart</string>
    <string name="Lougout">Lougout</string>

    <string name="profile_button">Profile</string>
    <string name="order_success_icon">order_conform_icon</string>
    <string name="total_amount">totalamount\n</string>
    <string name="order_id">order_id</string>
    <string name="order_date">order_date</string>
    <string name="order_time">order_time\n</string>
    <string name="Logout">logout\n</string>
    <string name="view_details">view details</string>
    <string name="track_order">track order</string>

    <string name="order_status">Order Status</string>
    <string name="order_details">Order Details</string>
    <string name="order_cooking">Order Cooking!</string>
    <string name="thank_you_purchase">Thank you for your purchase</string>
    <string name="items">Items</string>
    </resources>

